test/files/neg/t12704.check
t12704.scala:13: warning: match may not be exhaustive.
It would fail on the following input: L(_)
  def t2(t: P) = t match {
                 ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
